--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
@@ -128,9 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cMatrix4.h" />
+    <ClInclude Include="cTest.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp" />
+    <ClCompile Include="cTest.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
