--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="cMatrix4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
