Added vector class and 3 functions required for week 2 math homework

--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="cMatrix4.h" />
     <ClInclude Include="cTest.h" />
+    <ClInclude Include="cVector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp" />
