--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="cTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cVector4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp">
