--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="cVector4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cAssignmentOperations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp">
@@ -33,6 +36,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cAssignmentOperations.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
