Can now read files

--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="cAssignmentOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cFileReader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cMatrix4.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cAssignmentOperations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cFileReader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
