--- a/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
+++ b/MathWeek1MatrixClass/MathWeek1MatrixClass.vcxproj
@@ -128,12 +128,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="cAssignmentOperations.h" />
+    <ClInclude Include="cFileReader.h" />
     <ClInclude Include="cMatrix4.h" />
     <ClInclude Include="cTest.h" />
     <ClInclude Include="cVector4.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="cAssignmentOperations.cpp" />
+    <ClCompile Include="cFileReader.cpp" />
     <ClCompile Include="cMatrix4.cpp" />
     <ClCompile Include="cTest.cpp" />
     <ClCompile Include="main.cpp" />
